updated bio ending

--- a/bio.html
+++ b/bio.html
@@ -29,10 +29,9 @@
         I do this at <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> with tens of other committed and bright minds.
     </p>
     <p>
-        I find great pleasure in diving deep into entangled matters. When I don't get stuck myself, I enjoy crafting
-        (hopefully) clearer but still accurate stories, and sharing them around.
-        Humans, nature and technology seem to have a talent for creating complex scenarios, I am lucky!
-        This space was born in the attempt of capturing and shaping this storytelling energy.
+        I believe connecting different ideas and disciplines together is one of the greatest wonder in life.
+        It is also an extraordinaty tool we as humans have, to move forward in a more aware and collaborative way.
+        Finally, metaphors and symbols can make things much simpler and funnier to understand... and our world is already complex and gray enough, don't you think?
     </p>
     </div>
 </body>
