--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,7 @@
         <div><a href="index.html" class="page-links">Alberto Dall'Ora</a></div>
         <a href="poesie.html" class="page-links">Poesie</a>
         <a href="bio.html" class="page-selected-link">Bio</a>
-        <a href="contact.html" class="page-links">Contact</a>
+        <a href="contatti.html" class="page-links">Contatti</a>
     </div>
     <hr/>
     <br>
@@ -19,18 +19,17 @@
     <h2> Bio </h2>
     <img src="images/profile_pic.png" class="responsive-image" style="max-width: 100px;">
     <p>
-        Born and raised in Emilia, I moved to The Netherlands to see if a piece of land can be more flat than the Pianura Padana (it can!). 
-        Although I bike in the rain like a true Hollander, my body keeps running on parmesan and tortellini, which I stock up regularly from the source.
-
+        Nato e cresciuto in Emilia, mi sono trasferito in Olanda per vedere se un pezzo di terra potesse davvero essere più piatto della bassa modenese (è possibile!).
+        Nonostante voli in bici sotto la pioggia come un vero Dutch, il mio corpo viaggia ancora a parmigiano e tortellini, i quali in genere occupano il buona parte del mio bagaglio a mano.
     </p>
     <p>
-        I got a MSc in Systems and Control from TU Delft and now I come up with pieces of software that aim to make a better use of the existing electrical infrastructure. 
-        I do this at <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> with tens of other committed and bright minds.
+        Ho studiato Systems and Control alla TU di Delft e ora programmo algoritmi per fare un uso più efficiente della rete elettrica.
+        Lo faccio a <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> assieme a decine di menti giovani e brillanti.
     </p>
     <p>
-        I believe connecting different ideas and disciplines together is one of the greatest wonder in life.
-        It is also an extraordinaty tool we as humans have, to move forward in a more aware and collaborative way.
-        Finally, metaphors and symbols can make things much simpler and funnier to understand... and our world is already complex and gray enough, don't you think?
+        Credo che porsi le giuste domande sia più importante di ottenere delle risposte.
+        Non solo perchè spesso si connettono idee e discipline apparentemente lontane tra loro,
+        ma anche perchè così il viaggio della scoperta si fa più divertente, entusiasmante e significativo!
     </p>
     </div>
 </body>
