--- a/bio.html
+++ b/bio.html
@@ -20,11 +20,11 @@
     <img src="images/profile_pic.png" class="responsive-image" style="max-width: 100px;">
     <p>
         Nato e cresciuto in Emilia, mi sono trasferito in Olanda per vedere se un pezzo di terra potesse davvero essere più piatto della bassa modenese (è possibile!).
-        Nonostante voli in bici sotto la pioggia come un vero Dutch, il mio corpo viaggia ancora a parmigiano e tortellini, i quali in genere occupano il buona parte del mio bagaglio a mano.
+        Nonostante voli in bici sotto la pioggia come un vero Dutch, il mio corpo necessita ancora di una generosa dose di parmigiano e tortellini per funzionare.
     </p>
     <p>
         Ho studiato Systems and Control alla TU di Delft e ora programmo algoritmi per fare un uso più efficiente della rete elettrica.
-        Lo faccio a <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> assieme a decine di menti giovani e brillanti.
+        Lo faccio a <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> assieme a decine di ragazzi giovani e brillanti.
     </p>
     <p>
         Credo che porsi le giuste domande sia più importante di ottenere delle risposte.
