--- a/bio.html
+++ b/bio.html
@@ -20,16 +20,15 @@
     <img src="images/profile_pic.png" class="responsive-image" style="max-width: 100px;">
     <p>
         Nato e cresciuto in Emilia, mi sono trasferito in Olanda per vedere se un pezzo di terra potesse davvero essere più piatto della bassa modenese (è possibile!).
-        Nonostante voli in bici sotto la pioggia come un vero Dutch, il mio corpo necessita ancora di una generosa dose di parmigiano e tortellini per funzionare.
+        Nonostante voli in bici sotto la pioggia come un vero Dutch, necessito ancora di una generosa dose settimanale di parmigiano e tortellini per funzionare.
     </p>
     <p>
         Ho studiato Systems and Control alla TU di Delft e ora programmo algoritmi per fare un uso più efficiente della rete elettrica.
-        Lo faccio a <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> assieme a decine di ragazzi giovani e brillanti.
+        Lo faccio a <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> assieme a decine di altri ragazzi molto in gamba.
     </p>
     <p>
         Credo che porsi le giuste domande sia più importante di ottenere delle risposte.
-        Non solo perchè spesso si connettono idee e discipline apparentemente lontane tra loro,
-        ma anche perchè così il viaggio della scoperta si fa più divertente, entusiasmante e significativo!
+        Così si connettono idee e discipline apparentemente lontane tra loro, e così si rende la scoperta un divertente viaggio senza fine.
     </p>
     </div>
 </body>
