--- a/bio.html
+++ b/bio.html
@@ -27,7 +27,7 @@
         Lo faccio a <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> assieme a decine di altri ragazzi molto in gamba.
     </p>
     <p>
-        Credo che porsi le giuste domande sia più importante di ottenere delle risposte.
+        Credo che porsi le domande giuste sia più importante di ottenere delle risposte.
         Così si connettono idee e discipline apparentemente lontane tra loro, e così si rende la scoperta un divertente viaggio senza fine.
     </p>
     </div>
