--- a/bio.html
+++ b/bio.html
@@ -9,9 +9,10 @@
 <body>
     <div class="overlay-page">
         <div><a href="index.html" class="page-links">Alberto Dall'Ora</a></div>
-        <a href="poesie.html" class="page-links">Poesie</a>
-        <a href="bio.html" class="page-selected-link">Bio</a>
-        <a href="contatti.html" class="page-links">Contatti</a>
+        <a href="../racconti.html" class="page-links">Racconti</a>
+        <a href="../poesie.html" class="page-links">Poesie</a>
+        <a href="../bio.html" class="page-selected-link">Bio</a>
+        <a href="../contatti.html" class="page-links">Contatti</a>
     </div>
     <hr/>
     <br>
@@ -28,7 +29,7 @@
     </p>
     <p>
         Credo che porsi le domande giuste sia più importante di ottenere delle risposte.
-        Così si connettono idee e discipline apparentemente lontane tra loro, e così si rende la scoperta un divertente viaggio senza fine.
+        Così si connettono idee apparentemente lontane tra loro, e così si rende la scoperta un continuo viaggio comune.
     </p>
     </div>
 </body>
