--- a/bio.html
+++ b/bio.html
@@ -20,16 +20,13 @@
     <h2> Bio </h2>
     <img src="images/profile_pic.png" class="responsive-image" style="max-width: 100px;">
     <p>
-        Nato e cresciuto in Emilia, mi sono trasferito in Olanda per vedere se un pezzo di terra potesse davvero essere più piatto della bassa modenese (è possibile!).
-        Nonostante voli in bici sotto la pioggia come un vero Dutch, necessito ancora di una generosa dose settimanale di parmigiano e tortellini per funzionare.
+        Nato e cresciuto in Emilia, ho poi vissuto 5 anni in Olanda scorrendo tra ingegneria ed esplorazione.
     </p>
     <p>
-        Ho studiato Systems and Control alla TU di Delft e ora programmo algoritmi per fare un uso più efficiente della rete elettrica.
-        Lo faccio a <a href="http://spectral.energy/about/" style="text-decoration: none;">Spectral</a> assieme a decine di altri ragazzi molto in gamba.
+        Faticando a incanalare le mie spinte interne in un qualcosa di unico e definito, questo spazio nasce come contenitore multiforme di ciò che sono e sento.
     </p>
     <p>
-        Credo che porsi le domande giuste sia più importante di ottenere delle risposte.
-        Così si connettono idee apparentemente lontane tra loro, e così si rende la scoperta un continuo viaggio comune.
+        Arduo sostenitore della supremazia delle domande sulle risposte, mi realizzo nel collegare mondi e idee lontane tra loro, e a farlo insieme ad altri.
     </p>
     </div>
 </body>
