--- a/bio.html
+++ b/bio.html
@@ -26,7 +26,7 @@
         Faticando a incanalare le mie spinte interne in un qualcosa di unico e definito, questo spazio nasce come contenitore multiforme di ciò che sono e sento.
     </p>
     <p>
-        Arduo sostenitore della supremazia delle domande sulle risposte, mi realizzo nel collegare mondi e idee lontane tra loro, e a farlo insieme ad altri.
+        Arduo sostenitore della supremazia delle domande sulle risposte, mi realizzo nel collegare mondi e idee lontane tra loro, e a farlo insieme con altri.
     </p>
     </div>
 </body>
