--- a/bio.html
+++ b/bio.html
@@ -10,6 +10,7 @@
     <div class="overlay-page">
         <div><a href="index.html" class="page-links">Alberto Dall'Ora</a></div>
         <a href="../racconti.html" class="page-links">Racconti</a>
+        <a href="../dischi.html" class="page-links">Dischi</a>
         <a href="../poesie.html" class="page-links">Poesie</a>
         <a href="../bio.html" class="page-selected-link">Bio</a>
         <a href="../contatti.html" class="page-links">Contatti</a>
